--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -21,6 +21,8 @@
     background-color: #050A30;
     display: grid;
     grid-template-rows: 70% auto;
+    border-radius: 10px;
+    outline: hidden;
 }
 
 
@@ -51,13 +53,16 @@
 }
 
 .project-img {
-    background: #333;
+    background: transparent;
+    border-radius: 20px;
+    
 }
 
 .project img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .project-nav {
